# squeeze

./: .gitignore  .mailmap  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: fetch-ffmpeg.mjs  fetch-ghostscript.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  fs_bridge.rs  lib.rs  main.rs  probe.rs  thumbs.rs
src-tauri/src/commands/: compress_audio.rs  compress_image.rs  compress_pdf.rs  compress_video.rs  enhance.rs  mod.rs  remove_bg.rs  remove_watermark.rs
src-tauri/src/encoders/: ffmpeg_args.rs  hw_detect.rs  mod.rs
src-tauri/src/jobs/: progress.rs
src/components/dropzone/: Dropzone.tsx  EmptyState.tsx
src/components/filelist/: BareJobList.tsx  DoneCard.tsx  FileList.tsx  JobRow.tsx  QueueTotalBanner.tsx  Thumbnail.tsx  TypeFilterChips.tsx
src/components/results/: ErrorLogModal.tsx  PreviewModal.tsx
src/components/settings/: AdvancedDrawer.tsx  InteractivePreview.tsx  ModeTabs.tsx  OutputControls.tsx  PresetCards.tsx
src/components/settings/advanced/: AudioAdvancedSettings.tsx  (+3 more)
src/components/titlebar/: Titlebar.tsx
src/components/tour/: TourGuide.tsx
src/components/ui/: ErrorBoundary.tsx  Tooltip.tsx  scroll-area.tsx
src/hooks/: useCompression.ts  useDragDrop.ts  useJobProgress.ts  useMaximized.ts  useShortcuts.ts
src/lib/: estimate.ts  format.ts  i18n.ts  kinds.ts  outputPath.ts  tauri.ts
src/store/: jobs.ts  settings.ts  ui.ts
src/styles/: globals.css
src/types/: index.ts
