[package]
name = "squeeze"
version = "1.0.10"
description = "A fast, native Windows desktop app for compressing media"
authors = ["abdelrahman252"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "squeeze_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
ffmpeg-sidecar = "2"
lofty = "0.24.0"
sha2 = "0.11.0"
image = "0.25.10"
mozjpeg = "0.10"
oxipng = "9"
webp = "0.3"
lopdf = "0.40.0"
tract-onnx = "0.21.3"
ureq = "2.9.7"

